Use weld junit5 module